--- a/trip_planner_front/public/install.txt
+++ b/trip_planner_front/public/install.txt
@@ -6,3 +6,6 @@ npm install react-quill
 npm install quill-image-resize-module-react
 npm install @mui/material @emotion/react @emotion/styled
 npm install @mui/material @mui/styled-engine-sc styled-components
+
+npm install dayjs
+npm install @mui/x-date-pickers
